# dotfiles

./: .chezmoiignore  .envrc  .gitignore  README.md  config.yaml  dot_gitconfig  dot_p10k.zsh  dot_zsh_plugins.txt  dot_zsh_plugins.zsh  dot_zshalias  dot_zshenv  dot_zshrc  gitconfig  ls.json  profile.txt  run_onchange_fancontrol-fix.sh  vale.ini  zsh_plugins.headless.txt  zsh_plugins.txt  zshalias  zshenv  zshrc
.dotter/: cache.toml  global.toml  post_deploy.sh
backup/: user_configuration.json
config/: mimeapps.list  starship.toml  topgrade.toml
docs/: portable-skill-sync.md
dot_config/nvim/: init.lua  lazy-lock.json  mcpservers.json  pyproject.toml
dot_config/nvim/ftplugin/: python.lua
dot_config/nvim/lua/: chadrc.lua  mappings.lua  options.lua
dot_config/nvim/lua/configs/: autosave.lua  avante.lua  cmp.lua  codecompanion.lua  conform.lua  copilot.lua  gitsigns.lua  lazy.lua  lazydev.lua  lint.lua  lspconfig.lua  mcphub.lua  notify.lua  peek.lua  statuscol.lua  telescope.lua  treesitter-textobjects.lua  treesitter.lua  yarepl.lua
dot_config/nvim/lua/plugins/: init.lua
dot_config/nvim/snips/: package.json
dot_config/nvim/snips/snippets/: quarto.json
dot_config/nvim/src/nvim/: __init__.py
dot_rye/: config.toml
dotfiles/: Dockerfile  Renviron  Rprofile  Xresources  bash_profile  condarc  gitconfig  p10k.zsh  profile  radian_profile  todo.cfg  xinitrc  xprofile  zprofile  zsh_history  zsh_plugins.txt  zshalias  zshenv  zshrc
restore/: 01_restore_all_root.sh  02_restore_all.sh  Dockerfile  applist  dots  dots.sh  guided.py  restore_all  (+1 more)
(+609 files in other folders)
