[project]
name = "nvim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pynvim>=0.5.0",
    "prompt-toolkit>=3.0.47",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "tiktoken>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
