[project]
name = "nvim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pynvim>=0.6.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "tiktoken>=0.12.0",
    "aider-install>=0.2.0",
    "ty>=0.0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["*"]
